@@ -1,44 +1,54 @@
 package com.manga.controllers;
 
+import java.util.List;
+
 import com.manga.controllers.dao.MangaDAO;
 import com.manga.models.Manga;
 
-import java.util.Arrays;
-import java.util.List;
-
 public class MangaDAOTest {
     public static void main(String[] args) {
-        // Create DAO instance
+        // Create an instance of MangaDAO
         MangaDAO mangaDAO = new MangaDAO();
 
-        // 1. Test addManga method
-        List<String> genreList = Arrays.asList("Adventure", "Action"); // multiple genres
-        Manga manga = new Manga("One Piece", "Eiichiro Oda", genreList, "Ongoing", "1997-07-22", "A story about pirates.");
-        manga.setGenres(genreList);
+        // Test: Adding a new manga
+        Manga newManga = new Manga();
+        newManga.setTitle("Naruto");
+        newManga.setAuthor("Masashi Kishimoto");
+        newManga.setDescription("A young ninja seeks recognition from his peers and dreams of becoming the Hokage.");
+        newManga.setStatus("Ongoing");
+        newManga.setPublishedDate("1999-09-21");
+        newManga.setGenres(List.of("Action", "Adventure", "Shonen"));
 
-        boolean isAdded = mangaDAO.addManga(manga);
-        System.out.println("Manga added successfully: " + isAdded);
+        boolean isAdded = mangaDAO.addManga(newManga);
+        System.out.println("Add Manga: " + (isAdded ? "Success" : "Failed"));
 
-        // 2. Test getAllManga method
+        // Test: Retrieving all manga
         List<Manga> mangaList = mangaDAO.getAllManga();
-        System.out.println("\nAll Manga:");
-        for (Manga m : mangaList) {
-            System.out.println("Manga ID: " + m.getMangaId() +
-                    ", Title: " + m.getTitle() +
-                    ", Genres: " + m.getGenres());
+        System.out.println("Manga List: " + mangaList.size() + " manga(s) found.");
+        for (Manga manga : mangaList) {
+            System.out.println("Manga ID: " + manga.getMangaId());
+            System.out.println("Title: " + manga.getTitle());
+            System.out.println("Author: " + manga.getAuthor());
+            System.out.println("Description: " + manga.getDescription());
+            System.out.println("Status: " + manga.getStatus());
+            System.out.println("Published Date: " + manga.getPublishedDate());
+            System.out.println("Genres: " + String.join(", ", manga.getGenres())); // This will now safely handle empty or null genres
+            System.out.println("--------------------------");
         }
 
-        // 3. Test deleteManga method (delete by ID)
-        boolean isDeleted = mangaDAO.deleteManga(2); // Delete manga with ID 1 if exists
-        System.out.println("\nManga deleted successfully: " + isDeleted);
-
-        // 4. Test updateManga method (e.g., change description)
+        // Test: Editing a manga (update the description of the first manga)
         if (!mangaList.isEmpty()) {
-            Manga firstManga = mangaList.get(0);
-            firstManga.setDescription("An updated story about pirates.");
-            firstManga.setGenres(Arrays.asList("Adventure", "Drama")); // update genres too
-            boolean isUpdated = mangaDAO.editManga(firstManga);
-            System.out.println("\nManga updated successfully: " + isUpdated);
+            Manga mangaToEdit = mangaList.get(0);
+            mangaToEdit.setDescription("Updated description for the manga.");
+            boolean isEdited = mangaDAO.editManga(mangaToEdit);
+            System.out.println("Edit Manga: " + (isEdited ? "Success" : "Failed"));
+        }
+
+        // Test: Deleting a manga (delete the first manga)
+        if (!mangaList.isEmpty()) {
+            Manga mangaToDelete = mangaList.get(0);
+            boolean isDeleted = mangaDAO.deleteManga(mangaToDelete.getMangaId());
+            System.out.println("Delete Manga: " + (isDeleted ? "Success" : "Failed"));
         }
     }
 }
